--- a/config.toml
+++ b/config.toml
@@ -46,7 +46,7 @@ source = "JSON"
 target = ".*"
 
 [params]
-  description = "La prima associazione culturale telematica in Italia"
+  description = "Metro Olografix è un’associazione fondata nel 1994 a Pescara che abbraccia la cultura digitale libera, nata per condividere e diffondere la passione per la sicurezza informatica, i diritti digitali e la creatività hacker."
 
   galleryServer = "https://gallery.olografix.org"
 
