--- a/config.toml
+++ b/config.toml
@@ -48,6 +48,8 @@ target = ".*"
 [params]
   description = "Metro Olografix è un’associazione fondata nel 1994 a Pescara che abbraccia la cultura digitale libera, nata per condividere e diffondere la passione per la sicurezza informatica, i diritti digitali e la creatività hacker."
 
+  image = "images/metro-dark-preview.png"
+
   galleryServer = "https://gallery.olografix.org"
 
   archiveOldSite = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
