footer with social links

--- a/config.toml
+++ b/config.toml
@@ -54,6 +54,11 @@ target = ".*"
 
   archiveOldSite = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
 
+  github = "https://github.com/Metro-Olografix"
+  instagram = "https://www.instagram.com/metroolografix"
+  linkedin = "https://it.linkedin.com/company/metro-olografix"
+  facebook = "https://www.facebook.com/MetroOlografix"
+
   [[params.direttivo]]
     name = "Michelangelo Morrillo"
     nickname = "pinguino"
