--- a/config.toml
+++ b/config.toml
@@ -1,42 +1,24 @@
 baseURL = "https://olografix.org/"
-languageCode = "it-it"
-title = "Metro Olografix"
-
 enableRobotsTXT = true
+languageCode = 'it'
 
-[menu]
-  [[menu.main]]
-    name = "Home"
-    url = "/"
+defaultContentLanguage = 'it'
+defaultContentLanguageInSubdir = false
+[languages]
+  [languages.it]
+    languageCode = 'it-IT'
+    languageName = 'Italiano'
+    title = 'Metro Olografix'
     weight = 1
-  [[menu.main]]
-    name = "L'associazione"
-    url = "/associazione/"
+    [languages.it.params]
+      description = "Metro Olografix è un’associazione fondata nel 1994 a Pescara che abbraccia la cultura digitale libera, nata per condividere e diffondere la passione per la sicurezza informatica, i diritti digitali e la creatività hacker."
+  [languages.en]
+    languageCode = 'en-US'
+    languageName = 'English'
+    title = 'Metro Olografix'
     weight = 2
-  [[menu.main]]
-    name = "Attività"
-    url = "/attivita/"
-    weight = 3
-  [[menu.main]]
-    name = "Progetti"
-    url = "/progetti/"
-    weight = 4
-  [[menu.main]]
-    name = "Photogallery"
-    url = "/photogallery/"
-    weight = 5
-  [[menu.main]]
-    name = "Associati"
-    url = "https://associati.olografix.org"
-    weight = 6
-    [menu.main.params]
-      external = true
-  [[menu.main]]
-    name = "Vai al vecchio sito"
-    url = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
-    weight = 6
-    [menu.main.params]
-      external = true
+    [languages.en.params]
+      description = "Metro Olografix is an association founded in 1994 in Pescara that embraces free digital culture, established to share and spread a passion for cybersecurity, digital rights and hacker creativity."
 
 [markup.goldmark.renderer]
   unsafe = true
@@ -46,10 +28,6 @@ source = "JSON"
 target = ".*"
 
 [params]
-  description = "Metro Olografix è un’associazione fondata nel 1994 a Pescara che abbraccia la cultura digitale libera, nata per condividere e diffondere la passione per la sicurezza informatica, i diritti digitali e la creatività hacker."
-
-  image = "images/metro-dark-preview.png"
-
   galleryServer = "https://gallery.olografix.org"
 
   archiveOldSite = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
