--- a/config.toml
+++ b/config.toml
@@ -7,14 +7,14 @@ defaultContentLanguageInSubdir = false
 [languages]
   [languages.it]
     languageCode = 'it-IT'
-    languageName = 'Italiano'
+    languageName = 'IT'
     title = 'Metro Olografix'
     weight = 1
     [languages.it.params]
       description = "Metro Olografix è un’associazione fondata nel 1994 a Pescara che abbraccia la cultura digitale libera, nata per condividere e diffondere la passione per la sicurezza informatica, i diritti digitali e la creatività hacker."
   [languages.en]
     languageCode = 'en-US'
-    languageName = 'English'
+    languageName = 'EN'
     title = 'Metro Olografix'
     weight = 2
     [languages.en.params]
