--- a/config/_default/menus.it.toml
+++ b/config/_default/menus.it.toml
@@ -20,14 +20,14 @@
     weight = 5
 [[main]]
     name = "Associati"
-    pageRef = "https://associati.olografix.org"
+    url = "https://associati.olografix.org"
     weight = 6
     [main.params]
         external = true
         rainbowEffect = true
 [[main]]
     name = "Vai al vecchio sito"
-    pageRef = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
-    weight = 6
+    url = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
+    weight = 7
     [main.params]
         external = true
