refactorizzate attività, aggiunto MEGA BANNER in home

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,8 @@ baseURL = "https://olografix.org/"
 enableRobotsTXT = true
 languageCode = 'it'
 
+buildFuture = true
+
 defaultContentLanguage = 'it'
 defaultContentLanguageInSubdir = false
 [languages]
