--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -7,6 +7,9 @@ on:
 
   workflow_dispatch:
 
+  schedule:
+    - cron: '0 0 * * *'  # Esegue ogni giorno a mezzanotte UTC
+
 permissions:
   contents: read
   pages: write
