--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -20,11 +20,8 @@
     weight = 5
 [[main]]
     name = "Asociate"
-    url = "https://associati.olografix.org"
+    url = "/associazione/associati"
     weight = 6
-    [main.params]
-        external = true
-        rainbowEffect = true
 [[main]]
     name = "Visita el viejo sitio"
     url = "https://web.archive.org/web/20241002224544/https://www.olografix.org/"
