chore(direttivo): aggiornata lista

--- a/config.toml
+++ b/config.toml
@@ -70,8 +70,8 @@ target = ".*"
     role = "vice presidente"
   
   [[params.direttivo]]
-    name = "Simona Forti"
-    nickname = "nhaima"
+    name = "Marzia Calabrese"
+    nickname = ""
     role = "tesoriere"
   
   [[params.direttivo]]
@@ -80,14 +80,10 @@ target = ".*"
     role = "consigliere"
 
   [[params.direttivo]]
-    name = "Stefano Chiccarelli"
-    nickname = "neuro"
+    name = "Normando Marcolongo"
+    nickname = "manolab"
     role = "consigliere"
 
-  [[params.direttivo]]
-    name = "Igor Falcomatà"
-    nickname = "koba"
-    role = "consigliere"
 
 [[redirects]]
   from = '/**'
