--- a/config.toml
+++ b/config.toml
@@ -70,29 +70,20 @@ target = ".*"
     role = "vice presidente"
   
   [[params.direttivo]]
-    name = "Simona Forti"
-    nickname = "nhaima"
+    name = "Marzia Calabrese"
+    nickname = ""
     role = "tesoriere"
   
   [[params.direttivo]]
     name = "Lucia Zappacosta"
     nickname = "kundera"
     role = "consigliere"
-  
-  [[params.direttivo]]
-    name = "Irene Ragni"
-    nickname = "darklady"
-    role = "consigliere"
 
   [[params.direttivo]]
-    name = "Stefano Chiccarelli"
-    nickname = "neuro"
+    name = "Normando Marcolongo"
+    nickname = "manolab"
     role = "consigliere"
 
-  [[params.direttivo]]
-    name = "Igor Falcomatà"
-    nickname = "koba"
-    role = "consigliere"
 
 [[redirects]]
   from = '/**'
