--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -39,6 +39,15 @@ jobs:
         with:
           submodules: recursive
           fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Generate OG images
+        run: npm run og:generate
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
