--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -46,6 +46,18 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm ci
+      - name: Setup Tailwind CSS
+        run: |
+          # Download latest tailwindcss executable
+          curl -sLO https://github.com/tailwindlabs/tailwindcss/releases/latest/download/tailwindcss-linux-x64
+          
+          mv tailwindcss-linux-x64 tailwindcss
+          
+          # Make it executable
+          chmod +x tailwindcss
+          
+          # Generate tailwind dist
+          ./tailwindcss -i ./assets/css/tailwind_conf.css -o ./static/css/tailwind_out.css --minify
       - name: Generate OG images
         run: npm run og:generate
       - name: Setup Pages
