--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,4 @@
-content/ @lopoc @michelangelomo @consocio @matteocolazilli @filospateam
 * @lopoc @michelangelomo
+
+# Content review team!
+content/ @lopoc @michelangelomo @consocio @matteocolazilli @filospateam
