--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -6,6 +6,19 @@
     name = "The association"
     pageRef = "/associazione/"
     weight = 2
+    identifier = "associazione"
+
+[[main]]
+    name = "Our space"
+    pageRef = "/associazione/sede/"
+    weight = 1
+    parent = "associazione"
+
+[[main]]
+    name = "Statute"
+    pageRef = "/associazione/statuto/"
+    weight = 2
+    parent = "associazione"
 [[main]]
     name = "Activities"
     pageRef = "/attivita/"
