--- a/config/_default/menus.es.toml
+++ b/config/_default/menus.es.toml
@@ -6,6 +6,19 @@
     name = "La asociación"
     pageRef = "/associazione/"
     weight = 2
+    identifier = "associazione"
+
+[[main]]
+    name = "La sede"
+    pageRef = "/associazione/sede/"
+    weight = 1
+    parent = "associazione"
+
+[[main]]
+    name = "Estatuto"
+    pageRef = "/associazione/statuto/"
+    weight = 2
+    parent = "associazione"
 [[main]]
     name = "Actividades"
     pageRef = "/attivita/"
