--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "dev": "hugo server -D"
   },
   "dependencies": {
-    "satori": "^0.10.9",
-    "@resvg/resvg-js": "^2.4.1"
+    "@resvg/resvg-js": "^2.4.1",
+    "satori": "^0.10.9"
   },
   "engines": {
     "node": ">=18.0.0"
